Kubernetes-Manifests-file/overlays/prod/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todolist-prod-ingress

spec:
  ingressClassName: traefik

  rules:
    - host: todolist.local

      http:
        paths:
        
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todolist-frontend-service
                port:
                  number: 3000


          - path: /api
            pathType: Prefix
            backend:
              service:
                name: todolist-backend-service
                port:
                  number: 3500
